# src/routes/bannerRoute.js
@@ -4,8 +4,10 @@ const {
     updateBanner, 
     deleteBanner,
     getAllBanner,
+    getDetailBanner,
 } = require('../controllers/bannerController');
 const { uploadBanner } = require('../middleware/upload');
+const { checkAccessToken, isAdmin } = require('../middleware/authUser');
 
 
 
@@ -15,10 +17,11 @@ const router = express.Router();
 
 
 
-router.get('/layDanhSachBanner', getAllBanner);
-router.post('/themBanner',uploadBanner.single("hinhAnh") ,createBanner);
-router.put('/capNhatBanner', uploadBanner.single("hinhAnh"),updateBanner);
-router.delete('/xoaBanner', deleteBanner);
+router.get('/layDanhSachBanner', checkAccessToken, getAllBanner);
+router.get('/chiTietBanner', checkAccessToken,getDetailBanner)
+router.post('/themBanner',checkAccessToken, isAdmin,uploadBanner.single("hinhAnh") ,createBanner);
+router.put('/capNhatBanner', checkAccessToken, isAdmin, uploadBanner.single("hinhAnh"),updateBanner);
+router.delete('/xoaBanner', checkAccessToken, isAdmin, deleteBanner);
 
 
 module.exports = router;
